<resources>
    <string name="app_name">TikaTokaApp</string>
    <string name="enter">ENTER</string>
    <string name="my_channel">MY CHANNEL</string>
    <string name="my_subscriptions">MY SUBSCRIPTIONS</string>
    <string name="uploaded_videos">UPLOADED VIDEOS</string>
    <string name="videoname">VideoName</string>
    <string name="date">Date</string>
    <string name="available">AVAILABLE VIDEOS</string>
    <string name="add_hashtags">ADD HASHTAGS</string>
    <string name="upload">upload</string>
    <string name="my_feed">MY FEED</string>
    <string name="topic_name">topic name</string>
    <string name="hashtags">#HASHTAGS</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="available_topics">Available Topics</string>
    <string name="done">DONE</string>
    <string name="channel_name">Channel Name</string>
    <string name="upload_a_video">UPLOAD A VIDEO</string>
    <string name="channelname">ChannelName</string>
    <string name="video_name">Video Name</string>
    <string name="video_options">Video Options</string>
    <string name="channel_name_must_be_between_3_12_alphanumerical_characters">Channel Name must contain 3-12 alphanumerical characters!</string>
    <string name="wrong_input">Wrong Input!</string>
    <string name="ok">OK</string>
</resources>