<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/melon"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrong_input" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/error_icon" />

    <TextView
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel_name_must_be_between_3_12_alphanumerical_characters" />

    <Button
        android:id="@+id/OK_btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/ok" />
</LinearLayout>